# ComfyUI-Pets

./: .eslintrc.json  .gitignore  .prettierrc  README.md  __init__.py  custom_routes.py  package-lock.json  package.json  prestartup_script.py  pyproject.toml
.husky/: pre-commit
js/: apiClient.js  events.js  gif.js  index.js  utils.js
js/comfy/: comfy.js  ext.js  ui.js
js/game/: buttons.js  core.js  food.js  pet.js  stage.js
js/game/endless_runner/: index.js
js/game/flappy_game/: index.js
js/game/minigames/: endless_runner.js  flappy_pets.js  minigame.js
js/game/shop/: index.js  items.js
js/game/ui/: pointBar.js
js/game/user/: index.js
persistence/: __init__.py
