[project]
name = "comfyui-pets"
description = "Play with your pet while your workflow generates!"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/nathannlu/ComfyUI-Pets"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Pets"
Icon = ""
